# advent23

./: Cargo.toml  Justfile  README.md
day01/: README.md
day02/: Cargo.toml  README.md
day02/src/: game.pest  lib.rs
day03/: README.md  answers.txt
day03/src/: lib.rs
day04/: Cargo.toml  README.md
day04/src/: card.pest  lib.rs
day05/: Cargo.toml  README.md
day05/src/: lib.rs
day06/: Cargo.toml  README.md
day07/: Cargo.toml  README.md  answers.txt
day07/src/: main.rs
day08/: Cargo.toml  README.md
day09/: Cargo.toml  README.md
day10/: Cargo.toml  README.md
day10/src/: lib.rs
day11/: Cargo.toml  README.md  answers.txt
day11/src/: lib.rs
templates/: Cargo.toml  rust.rs
