[package]
name = "day05"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.4.11", features = ["derive"] }
lazy_static.workspace = true
rayon = "1.8.0"
regex.workspace = true
